@@ -1,7 +1,9 @@
 IMPORTANT
 ===========
 
-* Before even loading this package you must set the memory option via e.g. `options(java.parameters = "-Xmx5g")` to set a larger amount of RAM than the default of 500MB which will get you intro trouble. Only then invoke `library(bartMachine)`. If you don't do this YOU WILL GET OUT OF MEMORY ERRORS OR STUFF THAT LOOKS LIKE THIS `Error in validObject(.Object) : invalid class “jobjRef” object: invalid object for slot "jobj" in class "jobjRef": got class "NULL", should be or extend class "externalptr"`.
+* For the newest version >=1.4, *before* you load the package, you must set *both* the memory and the special speedup module and newer GC params are also recommended: `options(java.parameters = c("-Xmx20g", "--add-modules=jdk.incubator.vector", "-XX:+UseZGC"))`. If you don't do this you will get errors such as `Error in .jnew("bartMachine.bartMachineRegressionMultThread") : java.lang.NoClassDefFoundError: jdk/incubator/vector/Vector`.
+
+* For version <1.4, you must set the memory before `options(java.parameters = "-Xmx20g")` to set a larger amount of RAM than the default of 500MB which will get you intro trouble. Only after setting these options, then invoke `library(bartMachine)`. If you don't do this YOU WILL GET OUT OF MEMORY ERRORS OR STUFF THAT LOOKS LIKE THIS `Error in validObject(.Object) : invalid class “jobjRef” object: invalid object for slot "jobj" in class "jobjRef": got class "NULL", should be or extend class "externalptr"`.
 
 
 bartMachine
@@ -24,13 +26,9 @@ This is a Java implementation of the algorithm found in Chipman, George, & McCul
 Recent News
 ---------
 
-1/8/26
+January, 2026
 
-v1.3.6 released - switched from legacy trove package to modern (and maintained) fastutil, possible speedups on some datasets
-
-1/7/26
-
-v1.3.5 released - verbose flag behavior cleaned up, ggplot2 implementation, argument checks, documentation cleanup tests, benchmarks
+v1.3.5-1.4 released - major speedups using Java 21+ advancements and "Vector API code", switched from legacy trove package to modern (and maintained) [fastutil](https://github.com/vigna/fastutil) package, verbose flag behavior cleaned up, ggplot2 implementation, argument checks, documentation cleanup tests, testing, multiple benchmarks. The package is faster than the `BART` package but slower than the `dbarts` package for both training and prediction.
 
 
 The Paper
@@ -54,7 +52,7 @@ can install the package from CRAN or compile from source.
 
 ### Install Java JDK (not the JRE)
 
-Download the latest [Java JDK](https://jdk.java.net/) and install it properly. (Java 8 or above is required for version >=1.3). bartMachine requires rJava which requires the JDK; you cannot just have a JRE!
+Download the latest [Java JDK](https://jdk.java.net/) and install it properly. (Java >=21 is required for version >=1.4; Java >=8 is required for version <1.4). bartMachine requires `rJava` which requires the JDK; you cannot just have a JRE!
 
 ### Install rJava
 
@@ -66,17 +64,15 @@ Use `install.packages("bartMachine")` within R.
 
 ### Install bartMachine via compilation from source
 
-Due to CRAN limitations, we cannot release bartMachine for Java >7. Thus it is recommended to install bartMachine from source. This is recommended as you will get the benefits of Java 8-14 as well as the latest release of bartMachine if it's not on CRAN yet (see [changelog](https://github.com/kapelner/bartMachine/blob/master/bartMachine/CHANGELOG).
-
 1. Make sure you have [git](http://git-scm.com/downloads "Download git for all operating systems") 
 properly installed.
 
 2. Run `git clone https://github.com/kapelner/bartMachine.git` from your command line and navigate into the cloned project directory via `cd bartMachine`.
 
-3. Make sure you have a [Java JDK](https://jdk.java.net/14/) installed properly. Then make sure the bin directory is an element in the PATH variable (on a windows machine it would look something like `C:\Program Files\Java\jdk-13.0.2\bin`). We also recommend making a system variable `JAVA_HOME` pointing to the directory (save \bin).
+3. Make sure you have the latest [Java JDK](https://www.oracle.com/java/technologies/downloads/) installed properly. Then make sure the bin directory is an element in the PATH variable. We also recommend making a system variable `JAVA_HOME` pointing to the directory.
 
 3. Make sure you have [apache ant](http://ant.apache.org/bindownload.cgi "Download apache ant for all operating systems") installed properly. 
-Make sure you add the bin directory for ant to your system PATH variable (on a windows machine it would be something like `C:\Program Files (x86)\apache-ant-1.10.8\bin`). We also recommend making a system variable `ANT_HOME` pointing to the directory (save \bin).
+Make sure you add the bin directory for ant to your system PATH variable (on a windows machine it would be something like `C:\Program Files (x86)\apache-ant-1.10.15\bin`). We also recommend making a system variable `ANT_HOME` pointing to the directory (save \bin).
 
 4. Compile the JAVA source code into a JAR using `ant`. You should see a compilation record and then `BUILD SUCCESSFUL` and a total time.
 
@@ -84,7 +80,9 @@ Make sure you add the bin directory for ant to your system PATH variable (on a w
 
 
 #### Limiting CPU usage
+
 (At least under GNU/Linux) even if you set `set_bart_machine_num_cores(1)`, CPU usage per process can be much larger than 100% (reaching at times 200% or 300%). This can lead to CPU overloading, especially if you run multiple bartMachines in parallel (for example, if you use the [SuperLearner](https://cran.r-project.org/web/packages/SuperLearner/) package and use parallelization). This seems to be a consequence of the garbage collector. One way to avoid this problem is to issue `Sys.setenv(JAVA_TOOL_OPTIONS = "-XX:ParallelGCThreads=1")` *before* invoking `library(bartMachine)`. (If you use a cluster, for example a SNOW cluster, you will want to do this in the slaves too, for example `clusterEvalQ(the_name_of_your_cluster, {Sys.setenv(JAVA_TOOL_OPTIONS = "-XX:ParallelGCThreads=1")})`).
+
 
 Acknowledgements
 ------------------
